fix scss so theres no overflow and can fit header and viewer perfectly

--- a/packages/modules/cra-template-itwin-viewer/template/src/App.scss
+++ b/packages/modules/cra-template-itwin-viewer/template/src/App.scss
@@ -1,3 +1,9 @@
+.itwin-viewer-sample {
+  height: 100vh;
+  display: grid;
+  grid-template-rows: min-content 1fr;
+}
+
 .itwin-viewer-container {
-  height: 93.5vh !important;
+  height: unset !important;
 }
